Generate Swagger documentation. Refactoring the Get requests
